--- a/src/components/ComboEdit/comboedit.style.scss
+++ b/src/components/ComboEdit/comboedit.style.scss
@@ -1,21 +1,37 @@
-.dish-edit{
+.combo-edit{
   background-color: #fff;
-  width: 400px;
+  width: 900px;
   display: flex;
   justify-content: space-between;
   padding: 20px 40px;
   margin: 0 auto;
-  .dish-edit_image{
+  .combo-left{
+    display: flex;
+    justify-content: space-between;
+    width: 350px;
+  }
+  .combo-edit_image{
     width: 125px;
     img{
       width: 100%;
     }
   }
-  .dish-edit_infor{
+  .combo-right{
+
+    table{
+      width: 400px;
+      border: solid 1px black;
+      padding: 10px 20px;
+    }
+
+  }
+  h3 {
+    margin-bottom: 15px;
+  }
     .proirity{
       color: red;
     }
-    .dish-edit_label{
+    .combo-edit_label{
       display: block;
       margin-bottom: 6px;
     }
@@ -34,6 +50,20 @@
       padding: 5px 12px;
       margin-bottom: 7px;
       height: 70px;
+    }
+    .input-number{
+      display: inline;
+      width: 25px;
+      height: 25px;
+      margin: 0;
+      padding: 3px;;
+      
+    }
+    .input-checkbox{
+      display: inline;
+      height: 25px;
+      width: 25px;
+      margin: 0;
     }
     .switch {
       position: relative;
@@ -114,5 +144,5 @@
       background-color: red;
     }
   }
-  }
+  
 }
